// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for ProductTableRow component: should render the ProductTableRow component and match snapshot 1`] = `
<div>
  <div
    class="product-table-row"
    data-testid="product-table-row-Test Product"
  >
    <div
      class="details-arrow"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
          />
        </g>
      </svg>
    </div>
    <div>
      <p>
        Test Product
      </p>
    </div>
    <div
      class="table-bb-section"
    >
      <div>
        <div
          class="table-bb-image"
          style="width: 0px;"
        >
          <div
            data-tooltip-content="Messaging"
            data-tooltip-id="text-tooltip"
            data-tooltip-offset="-1"
          >
            <img
              alt="Logo for: bb-messaging"
              class="bb-image"
              data-nimg="1"
              decoding="async"
              height="18"
              loading="lazy"
              src="/_next/image?url=%2Fimages%2FbuildingBlocks%2Fbb-messaging.png&w=48&q=75"
              srcset="/_next/image?url=%2Fimages%2FbuildingBlocks%2Fbb-messaging.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2FbuildingBlocks%2Fbb-messaging.png&w=48&q=75 2x"
              style="color: transparent;"
              width="18"
            />
            <div
              class="text-tooltip"
            />
          </div>
        </div>
        <div>
          <div
            class="overflow-count"
            data-testid="bb-rest-count"
            data-tooltip-content="Messaging"
            data-tooltip-id="text-tooltip"
          >
            <p>
              +1
            </p>
            <div
              class="text-tooltip"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="product-last-update"
    >
      <p
        class="product-last-update"
      >
        2/12/2023
      </p>
    </div>
    <div
      data-testid="product-overall-compatibility"
    >
      <p>
        23%
      </p>
    </div>
  </div>
</div>
`;

exports[`Unit tests for ProductTableRow component: when product compatibilities length is equal to 0. 1`] = `
<div>
  <div
    class="product-table-row"
    data-testid="product-table-row-Test Product"
  >
    <div
      class="details-arrow"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
          />
        </g>
      </svg>
    </div>
    <div>
      <p>
        Test Product
      </p>
    </div>
    <div
      class="table-bb-section"
    >
      <div>
        <div
          class="table-bb-image"
          style="width: 75%;"
        />
        <div />
      </div>
    </div>
    <div
      data-testid="product-last-update"
    >
      <p
        class="product-last-update"
      >
        2/12/2023
      </p>
    </div>
    <div
      data-testid="product-overall-compatibility"
    >
      <p>
        23%
      </p>
    </div>
  </div>
</div>
`;
